<resources>
    <string name="jayyo">Jayyo</string>

    <string name="app_name">My Calculator</string>

    <string name="editTextHint">請輸入您的姓名</string>
    <string name="comfirm">確定</string>

    <string name="user">使用者</string>

    <string name="clear">C</string>
    <string name="delete">←</string>
    <string name="point">.</string>
    <string name="equal">=</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">＋</string>
    <string name="subtract">－</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    <string name="factorial">x!</string>
</resources>